--- a/.github/workflows/jfrog-oidc-docker.yml
+++ b/.github/workflows/jfrog-oidc-docker.yml
@@ -15,7 +15,7 @@ env:
   # Artifactory repos / registry
   GENERIC_REPO: ${{ vars.GENERIC_REPO || 'my-generic-repo' }}
   DOCKER_REPO:  ${{ vars.DOCKER_REPO  || 'myrepo-docker' }}
-  JF_REGISTRY:  ${{ vars.JF_REGISTRY  || 'aboavent.jfrog.io' }} # <-- host ONLY (no https)
+  JF_REGISTRY:  ${{ vars.JF_REGISTRY  || 'aboavent.jfrog.io' }} # host ONLY (no https)
   # Scanning behavior
   FAIL_ON_SEVERITY: ${{ vars.FAIL_ON_SEVERITY || 'none' }}       # none|low|medium|high|critical
   XRAY_FORMAT: table
@@ -49,10 +49,10 @@ jobs:
             echo "- **DOCKER_REPO**: \`${{ env.DOCKER_REPO }}\`"
           } >> "$GITHUB_STEP_SUMMARY"
 
-      # ---------- Source scan: SAST / Secrets / IaC (non-blocking) ----------
-      - name: Scan repository (non-blocking)
+      # ---------- NEW: Audit dependencies first (SCA/SBOM) ----------
+      - name: Audit dependencies (pre-build, non-blocking)
         shell: bash
-        run: jf scan . --fail=false --format "${{ env.XRAY_FORMAT }}"
+        run: jf audit . --format "${{ env.XRAY_FORMAT }}" --fail=false
 
       # ---------- Build Docker image ----------
       - name: Compose image tags
@@ -70,7 +70,7 @@ jobs:
         run: |
           docker build -t "${{ steps.tags.outputs.sha_tag }}" -t "${{ steps.tags.outputs.ref_tag }}" .
 
-      # ---------- Optional: image scan before push ----------
+      # ---------- Scan AFTER image is created ----------
       - name: Image scan (Xray, non-blocking)
         shell: bash
         run: jf scan "docker://${{ steps.tags.outputs.sha_tag }}" --fail=false --format "${{ env.XRAY_FORMAT }}"
@@ -107,7 +107,6 @@ jobs:
         shell: bash
         run: |
           if [ "${FAIL_ON_SEVERITY}" = "none" ]; then
-            # Do not fail the pipeline on findings
             jf bs "${BUILD_NAME}" "${BUILD_NUMBER}" || true
           else
             jf bs "${BUILD_NAME}" "${BUILD_NUMBER}" --fail-on-severity "${FAIL_ON_SEVERITY}"
