--- a/.github/workflows/jfrog-oidc-docker.yml
+++ b/.github/workflows/jfrog-oidc-docker.yml
@@ -1,4 +1,4 @@
-name: "JFrog OIDC CI Workflow with Audit & Image Scan (Docker)"
+name: "JFrog OIDC CI Workflow with Full Security Scan (Docker)"
 
 on:
   push:
@@ -10,19 +10,17 @@ permissions:
 
 env:
   PYTHON_VERSION: ${{ vars.PYTHON_VERSION || '3.11' }}
-  BUILD_NAME:     ${{ vars.BUILD_NAME     || 'jfrog-docker-security-scan-build' }}
-  BUILD_NUMBER:   ${{ vars.BUILD_NUMBER   || github.run_id }}
-  # Artifactory / Registry
-  GENERIC_REPO: ${{ vars.GENERIC_REPO || 'my-generic-repo' }}
+  BUILD_NAME: ${{ vars.BUILD_NAME || 'jfrog-docker-security-scan-build' }}
+  BUILD_NUMBER: ${{ vars.BUILD_NUMBER || github.run_id }}
+
+  # Artifactory / Docker registry
   DOCKER_REPO:  ${{ vars.DOCKER_REPO  || 'myrepo-docker' }}
-  JF_REGISTRY:  ${{ vars.JF_REGISTRY  || 'aboavent.jfrog.io' }}   # host ONLY (no https)
-  JF_URL:       ${{ vars.JF_URL }}                                 # e.g. https://aboavent.jfrog.io
+  JF_REGISTRY:  ${{ vars.JF_REGISTRY  || 'aboavent.jfrog.io' }}   # host only (no https)
+
   # Scanning behavior
   FAIL_ON_SEVERITY: ${{ vars.FAIL_ON_SEVERITY || 'none' }}         # none|low|medium|high|critical
-  XRAY_FORMAT: table
-  # (kept for reference; not used directly here)
-  UPLOAD_PATTERN:    ${{ vars.UPLOAD_PATTERN    || '**/*' }}
-  UPLOAD_EXCLUSIONS: ${{ vars.UPLOAD_EXCLUSIONS || '**/.git/**;**/.github/**;**/.jfrog/**' }}
+  XRAY_FORMAT: ${{ vars.XRAY_FORMAT || 'table' }}
+  AUDIT_TARGET: ${{ vars.AUDIT_TARGET || 'app' }}                  # where pyproject/requirements live
 
 jobs:
   build-scan-and-publish:
@@ -34,45 +32,32 @@ jobs:
       - name: Setup JFrog CLI (OIDC)
         uses: jfrog/setup-jfrog-cli@v4
         env:
-          JF_URL: ${{ env.JF_URL }}
+          JF_URL: ${{ vars.JF_URL }}                      # e.g., https://aboavent.jfrog.io
         with:
-          oidc-provider-name: github-oidc-integration
+          oidc-provider-name: github-oidc-integration     # must exist in JFrog Platform
 
-      - name: Ensure jq is available
-        shell: bash
-        run: |
-          if ! command -v jq >/dev/null 2>&1; then
-            sudo apt-get update -y && sudo apt-get install -y jq
-          fi
-
-      - name: "Sanity: show effective settings"
+      - name: Sanity: show effective settings
         shell: bash
         run: |
           set -euo pipefail
+          echo "JF_URL=${{ vars.JF_URL }}"
+          echo "JF_REGISTRY=${{ env.JF_REGISTRY }}"
           echo "DOCKER_REPO=${{ env.DOCKER_REPO }}"
-          jf rt curl -s -XGET "/api/repositories/${{ env.DOCKER_REPO }}" | jq '{key,packageType,type,repositories,defaultDeploymentRepo}'
-          {
-            echo "### JFrog Settings"
-            echo "- **JF_URL**: \`${{ env.JF_URL }}\`"
-            echo "- **JF_REGISTRY**: \`${{ env.JF_REGISTRY }}\`"
-            echo "- **DOCKER_REPO**: \`${{ env.DOCKER_REPO }}\`"
-          } >> "$GITHUB_STEP_SUMMARY"
+          jf --version
 
-      # ---------- 1) AUDIT: deps SBOM+SCA (non-blocking here) ----------
-      - name: Audit dependencies (non-blocking)
+      # ---------- 1) Audit source dependencies (pre-build; non-blocking) ----------
+      - name: Audit source deps (pre-build)
         shell: bash
-        run: jf audit . --fail=false --format "${{ env.XRAY_FORMAT }}"
+        run: |
+          set -euo pipefail
+          jf audit "${{ env.AUDIT_TARGET }}" --fail=false --format "${{ env.XRAY_FORMAT }}"
 
-      # ---------- 2) REPO SCAN: SAST / Secrets / IaC (non-blocking) ----------
-      - name: Scan repository (non-blocking)
-        shell: bash
-        run: jf scan . --fail=false --format "${{ env.XRAY_FORMAT }}"
-
-      # ---------- 3) BUILD IMAGE ----------
+      # ---------- Build Docker image ----------
       - name: Compose image tags
         id: tags
         shell: bash
         run: |
+          set -euo pipefail
           NAME="notes-api"
           SHA_TAG="${{ env.JF_REGISTRY }}/${{ env.DOCKER_REPO }}/${NAME}:${GITHUB_SHA}"
           SAFE_BRANCH=$(echo "${GITHUB_REF_NAME:-main}" | tr '/ ' '--')
@@ -80,39 +65,35 @@ jobs:
           echo "sha_tag=${SHA_TAG}" >> "$GITHUB_OUTPUT"
           echo "ref_tag=${REF_TAG}" >> "$GITHUB_OUTPUT"
 
-      - name: Build Docker image
+      - name: Build image (local)
         shell: bash
-        run: |
-          docker build -t "${{ steps.tags.outputs.sha_tag }}" -t "${{ steps.tags.outputs.ref_tag }}" .
-
-      # ---------- 4) IMAGE SCAN: try local; if missing, pull then scan ----------
-      - name: Image scan (Xray; local with pull fallback)
-        shell: bash
-        env:
-          IMG_TAG: ${{ steps.tags.outputs.sha_tag }}      # e.g., aboavent.jfrog.io/myrepo-docker/notes-api:<sha>
-          XRAY_FORMAT: ${{ env.XRAY_FORMAT }}
-          JF_REGISTRY: ${{ env.JF_REGISTRY }}
         run: |
           set -euo pipefail
-          echo "Verifying local image:"
-          docker image inspect "${IMG_TAG}" >/dev/null 2>&1 || {
-            echo "Local image not found. Pulling from registry..."
-            jf docker-login "${JF_REGISTRY}"
-            docker pull "${IMG_TAG}"
-          }
-      
-          echo "Scanning with Xray (local daemon)…"
-          # Use --type docker instead of docker:// scheme
-          if ! jf scan --type docker "${IMG_TAG}" --fail=false --format "${XRAY_FORMAT}"; then
-            echo "Direct scan failed; saving image to tar and scanning tar as fallback…"
+          docker build -t "${{ steps.tags.outputs.sha_tag }}" -t "${{ steps.tags.outputs.ref_tag }}" .
+
+      # ---------- 2) Image scan (try docker://, then tar fallback) ----------
+      - name: Image scan (Xray; docker URI with tar fallback)
+        shell: bash
+        env:
+          IMG_TAG: ${{ steps.tags.outputs.sha_tag }}
+          XRAY_FORMAT: ${{ env.XRAY_FORMAT }}
+        run: |
+          set -euo pipefail
+          echo "Trying docker:// scan for ${IMG_TAG} ..."
+          if jf scan "docker://${IMG_TAG}" --fail=false --format "${XRAY_FORMAT}"; then
+            echo "docker:// scan succeeded."
+          else
+            echo "docker:// scan failed; saving to tar and scanning tar as fallback..."
             docker save "${IMG_TAG}" -o image.tar
             jf scan image.tar --fail=false --format "${XRAY_FORMAT}"
           fi
 
-      # ---------- 5) PUSH & RECORD BUILD-INFO ----------
+      # ---------- Push image & record build-info ----------
       - name: Docker login (Artifactory via JF CLI)
         shell: bash
-        run: jf docker-login ${{ env.JF_REGISTRY }}
+        run: |
+          set -euo pipefail
+          jf docker-login ${{ env.JF_REGISTRY }}
 
       - name: Push image & record build-info
         shell: bash
@@ -120,6 +101,7 @@ jobs:
           BUILD_NAME: ${{ env.BUILD_NAME }}
           BUILD_NUMBER: ${{ env.BUILD_NUMBER }}
         run: |
+          set -euo pipefail
           jf rt docker-push "${{ steps.tags.outputs.sha_tag }}" "${{ env.DOCKER_REPO }}" \
             --build-name "${BUILD_NAME}" --build-number "${BUILD_NUMBER}"
           jf rt docker-push "${{ steps.tags.outputs.ref_tag }}" "${{ env.DOCKER_REPO }}" \
@@ -130,9 +112,11 @@ jobs:
         env:
           BUILD_NAME: ${{ env.BUILD_NAME }}
           BUILD_NUMBER: ${{ env.BUILD_NUMBER }}
-        run: jf rt build-publish "${BUILD_NAME}" "${BUILD_NUMBER}"
+        run: |
+          set -euo pipefail
+          jf rt build-publish "${BUILD_NAME}" "${BUILD_NUMBER}"
 
-      # ---------- 6) POLICY-GATED BUILD SCAN ----------
+      # ---------- 3) Policy-gated build scan ----------
       - name: Scan published build (policy-gated)
         shell: bash
         env:
@@ -140,6 +124,7 @@ jobs:
           BUILD_NUMBER: ${{ env.BUILD_NUMBER }}
           FAIL_ON_SEVERITY: ${{ env.FAIL_ON_SEVERITY }}
         run: |
+          set -euo pipefail
           if [ "${FAIL_ON_SEVERITY}" = "none" ]; then
             jf bs "${BUILD_NAME}" "${BUILD_NUMBER}" || true
           else
